--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@livekit/components-react": "^2.9.17",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
-    "livekit-client": "^2.16.1",
-    "livekit-server-sdk": "^2.15.0",
     "lucide-react": "^0.561.0",
+    "mediasoup-client": "^3.7.17",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0"
   },
@@ -27,7 +24,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/simple-peer": "^9.11.9",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "tailwindcss": "^4",
